# mt-g-s

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
